crates/sdk/tests/macros/error_event_on_struct.stderr
error: (calimero)> `#[app::event]` can only be applied to an enum — events are serialized as a tagged union (`{ "kind": ..., "data": ... }`), which has no meaning for a struct.

       Model each event as an enum variant instead:

       #[app::event]
       pub enum Event { /* one variant per event */ }
 --> tests/macros/error_event_on_struct.rs:6:12
  |
6 | pub struct InvalidStructEvent {
  |            ^^^^^^^^^^^^^^^^^^
